admission/validatingAdmissionPolicies/policies/poststart-tcpsocket-host/initcontainers/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: poststart-tcpsocket-host-initcontainers
  annotations:
    security.kubeapt.io/displayName: 'Poststart Tcpsocket Host'
    security.kubeapt.io/description: ValidatingAdmissionPolicy for poststart-tcpsocket-host/initcontainers.
    security.kubeapt.io/resource: Initcontainers
    security.kubeapt.io/severity: medium
    security.kubeapt.io/remediation: Adjust workloads to satisfy the poststart-tcpsocket-host/initcontainers policy.
    policies.kolteq.com/validatingAdmissionPolicy: 32986670-7359-54d8-b223-1fb7e00b70d4
  labels:
    poststart-tcpsocket-host-initcontainers.security.kolteq.com/audit: 'false-true'
    poststart-tcpsocket-host-initcontainers.security.kolteq.com/enforce: 'false-true'
    poststart-tcpsocket-host-initcontainers.security.kolteq.com/warn: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE","UPDATE"]
        resources: ["pods"]
  validations:
    - expression: >
        !has(object.spec.initContainers) ||
        object.spec.initContainers.all(ic,
          !has(ic.lifecycle) ||
          !has(ic.lifecycle.postStart) ||
          !has(ic.lifecycle.postStart.tcpSocket) ||
          !has(ic.lifecycle.postStart.tcpSocket.host) ||
          ic.lifecycle.postStart.tcpSocket.host == ""
        )
      message: >
        spec.initContainers[*].lifecycle.postStart.tcpSocket.host must be undefined or empty ("").
